# xpath-expressions

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
tests/: conftest.py  test_dunders.py  test_expression_functions.py  test_funcs.py  test_lxml.py
xpath/: __init__.py
xpath/functions/: __init__.py  saxon.py  xpath_1.py  xpath_2.py  xpath_3.py
