[tool]
[tool.poetry]
name = "xpath-expressions"
packages = [
    { include = "xpath" }
]
version = "1.0.2"
description = "Treat XPath expressions as Python objects "
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
homepage = "https://github.com/orf/xpath-expressions"
authors = ["orf <tom@tomforb.es>"]
readme = "README.md"
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = ">3.5"

[tool.poetry.dev-dependencies]
lxml = "^4.5.0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
